
The actions are still defined to do stuff individually, but users have no
need of that sort of granularity. Much nicer now :)

-------------------------------------------------------------------------------

Mon Feb 28 19:39:46 GMT 2000
(gilbertt)

64-bit fixes from Bob Arendt <rdarendt@cwcom.net>

-------------------------------------------------------------------------------

Tue Feb 29 19:44:59 GMT 2000
(gilbertt)

Hehe. Typo stopped the list skip thing being loaded from the .snaps.x file.
Fixed.

-------------------------------------------------------------------------------

Tue Mar 14 18:57:38 CET 2000
(Christian)

Small fix for people who want to pop up
menus using their keyboard.

-------------------------------------------------------------------------------

Tue Mar 14 20:23:53 CET 2000
(Saur)

Added patch from Masahiko Mori <masa@cthulhu.engr.sgi.com>
to improve localization support (I modified the patch somewhat).

-------------------------------------------------------------------------------

Tue Mar 14 22:23:27 GMT 2000
(gilbertt)

Patches from Bob Arendt <rdarendt@cwcom.net> to enable a user-configurable
cache-dir. Solves some preformance problems on NFS-mounted home directories.
Also fixes a couple of bugs with the current -econfdir option.

I've tested this fairly well, as has Bob, but let me know if there are any
problems.


-------------------------------------------------------------------------------

Thu Mar 16 23:02:49 GMT 2000
(gilbertt)

Patch from Marius Aamodt Eriksen <marius@linux.com>. Provides option to
include shaded windows in focuslist. Now all we need is an "include
iconified windows" option...


-------------------------------------------------------------------------------

Fri Mar 17 21:09:33 GMT 2000
(gilbertt)

Another patch from Marius Aamodt Eriksen <marius@linux.com>. Adds the
option to include iconified windows in the focuslist and uniconify them on
selection. Flim.